# zcash-t2o

./: .gitignore  Makefile  PLAN.md  PROBEM_SPEC.md  README.md  TESTING.md  ZIP_0244_SPEC.md  flake.nix  go.mod  go.sum
cmd/zcash-t2o/: main.go
pkg/api/: api.go
pkg/crypto/: secp256k1.go  tx_parser.go  zip244.go  zip244_test.go
pkg/ffi/: VERIFICATION.md  bridge.go  bridge_test.go
pkg/ffi/rust/: Cargo.toml  build.rs  cbindgen.toml
pkg/ffi/rust/src/: lib.rs
pkg/pczt/: errors.go  serialization.go  serialization_test.go  types.go
pkg/roles/: combiner.go  constructor.go  creator.go  integration_test.go  io_finalizer.go  signer.go  spend_finalizer.go  tx_extractor.go
pkg/zip321/: parser.go
testdata/vectors/: zip_0244.json
