[package]
name = "zcash-t2o-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Suffix Labs"]
description = "Rust FFI wrapper for Zcash transparent-to-Orchard PCZT operations"
license = "MIT OR Apache-2.0"

# Build as a C-compatible static library and cdylib for CGO
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Zcash core dependencies from local librustzcash
# Using absolute paths to local librustzcash
zcash_primitives = { path = "/home/trbiv/Projects/privacy-szn/electric-coin-co/librustzcash/zcash_primitives" }
zcash_proofs = { path = "/home/trbiv/Projects/privacy-szn/electric-coin-co/librustzcash/zcash_proofs" }
pczt = { path = "/home/trbiv/Projects/privacy-szn/electric-coin-co/librustzcash/pczt", features = ["prover", "orchard"] }

# Orchard - will be pulled in by the above dependencies with compatible version
orchard = "0.11"

# Curve operations
pasta_curves = "0.5"
group = "0.13"

# RedPallas signatures
reddsa = "0.5"

# Note encryption
zcash_note_encryption = "0.4"

# Serialization
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
thiserror = "1.0"

# FFI helpers
libc = "0.2"

# Hex encoding for debugging
hex = "0.4"

# Random number generation
rand = "0.8"

# Constant-time operations - force version to match librustzcash
subtle = "2.6"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation during development
opt-level = 0
